reconstruct file structure
